@@ -5,6 +5,12 @@
 	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
 	(SC_PATH_X): Correct syntax error when xincludes not found.
 
+	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
+	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST
+	macro and --enable-embedded-manifest configure arg added to
+	support manifest embedding where we know the magic.  Help prevents
+	DLL hell with MSVC8+.
+
 2010-08-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* doc/ttk_spinbox.n (new), doc/ttk_*.3, doc/ttk_*.n:
